--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="DSC00135.jpg" alt="Karthikay's profie pcture"></td>
+            <td><img src="DSC00135.JPG" alt="Karthikay's profie pcture"></td>
             <td> <h1>Karthikay Somvanshi</h1>
                 <p>Student.</p>
                 <p>I am pursuing a Bachelor's degree in Art's with subjects <em>Political Sciences</em> and <em>Psychology</em>.</p></td>
@@ -17,14 +17,25 @@
     </table>
     <hr>
     <h3>Education.</h3>
-    <ul>
-        <li>High school.- <a href="http://www.cmseducation.org/">City Montessori School.</a> </li>
-        <li>10+2.- <a href="https://www.rlbschools.org/">RLB.</a></li>
-        <li>U.G.-<a href="http://www.ignou.ac.in/">IGNOU</a></li>
-    </ul>
+    <table>
+        <ul>
+            <tr>
+                <td><li>High school.-</li> </td>
+                <td><a href="http://www.cmseducation.org/">City Montessori School.</a> </td>
+            </tr>
+            <tr>
+                <td><li>10+2.- </li></td>
+                <td><a href="https://www.rlbschools.org/">RLB.</a></td>
+            </tr>
+            <tr>
+                <td><li>U.G.-</li></td>
+                <td><a href="http://www.ignou.ac.in/">IGNOU</a></td>
+            </tr>
+        </ul>
+    </table>
     <hr>
     <h3>Year of Graduation</h3>
-    <table cellspacing="10">
+    <table cellspacing="20">
         <thead>
             <th>Grade</th>
             <th>Year Of Graduation</th>
@@ -32,15 +43,15 @@
         <tbody>
          <tr>
             <td>High School</td>
-            <td>2016</td>
+            <td><center>2016</center></td>
          </tr>
          <tr>
             <td>10+2</td>
-            <td>2018</td>
+            <td><center>2018</center></td>
          </tr>
          <tr>
              <td>Bachelor's</td>
-             <td>2023</td>
+             <td><center>2023</center></td>
          </tr>
          </tbody>
     </table>
