--- a/Contact me.html
+++ b/Contact me.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact me.</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>My Contacts.</h1>
+    <h1 id="heading">My Contacts.</h1>
     <table>
         <tr>
             <td>Phone Number:</td>
@@ -23,7 +24,7 @@
         </tr>
     </table>
     <hr size="1">
-    <h3>Please fill the following details.</h3>
+    <h3 class="sheading">Please fill the following details.</h3>
     <form action="mailto:singhkarthikey1608@mail.com" enctype="text/plain">
         <table>
             <tr>
