--- a/Hobbies.html
+++ b/Hobbies.html
@@ -6,13 +6,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hobbies</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h3>My Hobbies.</h3>
+        <h3 class="sheading">My Hobbies.</h3>
     <ol>
-        <li>Gaming</li>
-        <li>Reading Books</li>
-        <li>Playing Cricket.</li>
+        <li>Playing Games</li>
+        <li>Reading Books and Manga</li>
+        <li>Playing Cricket</li>
     </ol>
     </body>
     </html>
