--- a/index.html
+++ b/index.html
@@ -1,88 +1,68 @@
-<html><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karthikay Somvanshi's Personal Site</title>
-</head>
-<body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Karthikay's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+
+  <body>
     <table cellspacing="20">
+      <tr>
+        <td><img class="circular" src="images/DSC00135.JPG" alt="karthikay profile picture"></td>
+        <td><h1 id="heading">Karthikay Somvashi</h1>
+        <p><em>Student.</em></p>
+        <p>I am an Web Developer. I ❤️ coffee.</p></td>
+      </tr>
+    </table>
+    <hr>
+    <h3 class="sheading">Books read</h3>
+    <ul>
+      <li>The Kite Runner by Khaled Hosseini </li>
+      <li>India 2020 by A P J Abdul Kalam and Y. S. Rajan.</li>
+    </ul>
+    <hr>
+    <h3 class="sheading">Education</h3>
+    <table cellspacing="10">
+      <thead>
         <tr>
-            <td><img src="DSC00135.JPG" alt="Karthikay's profie pcture"></td>
-            <td> <h1>Karthikay Somvanshi</h1>
-                <p>Student.</p>
-                <p>I am pursuing a Bachelor's degree in Art's with subjects <em>Political Sciences</em> and <em>Psychology</em>.</p></td>
+          <th>Grade</th>
+          <th>Schools</th>
         </tr>
-    </table>
-    <hr>
-    <h3>Education.</h3>
-    <table>
-        <ul>
-            <tr>
-                <td><li>High school.-</li> </td>
-                <td><a href="http://www.cmseducation.org/">City Montessori School.</a> </td>
-            </tr>
-            <tr>
-                <td><li>10+2.- </li></td>
-                <td><a href="https://www.rlbschools.org/">RLB.</a></td>
-            </tr>
-            <tr>
-                <td><li>U.G.-</li></td>
-                <td><a href="http://www.ignou.ac.in/">IGNOU</a></td>
-            </tr>
-        </ul>
-    </table>
-    <hr>
-    <h3>Year of Graduation</h3>
-    <table cellspacing="20">
-        <thead>
-            <th>Grade</th>
-            <th>Year Of Graduation</th>
-        </thead>
-        <tbody>
-         <tr>
-            <td>High School</td>
-            <td><center>2016</center></td>
-         </tr>
-         <tr>
-            <td>10+2</td>
-            <td><center>2018</center></td>
-         </tr>
-         <tr>
-             <td>Bachelor's</td>
-             <td><center>2023</center></td>
-         </tr>
-         </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table>
+      </thead>
+      <tbody>
         <tr>
-            <td><table cellspacing="10">
-                <tr>
-                    <td>Photography</td>
-                    <td>⭐</td>
-                </tr>
-                <tr>
-                    <td>Java</td>
-                    <td>⭐⭐</td>
-                </tr>
-            </table></td>
-            <td><table cellspacing="10">
-                <tr>
-                    <td>Web Development</td>
-                    <td>⭐⭐</td>
-                </tr>
-                <tr>
-                    <td>Python</td>
-                    <td>⭐⭐</td>
-                </tr>   
-            </table></td>
+          <td>High School</td>
+          <td><a href="http://www.cmseducation.org/">City Montessori School.</a></td>
         </tr>
+        <tr>
+          <td>Intermediate</td>
+          <td><a href="https://www.rlbschools.org/">Rani Laxmi Bai Memorial School.</a></td>
+        </tr>
+        <tr>
+          <td>Under Graduate</td>
+          <td><a href="http://ignou.ac.in/">IGNOU</a></td>
+        </tr>
+      </tbody>
     </table>
     <hr>
-    <a href="Hobbies.html">My Hobbies.</a>
-    <a href="Contact me.html">My Contact.</a>
-</body>
-</html></html>
+    <h3 class="sheading">Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>Web Development</td>
+        <td>⭐️</td>
+      </tr>
+      <tr>
+        <td>I don't know</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Photography</td>
+        <td>⭐️</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact me.html">Contact Me</a>
+  </body>
+</html>
